modules/indexing/src/main/antlr4/org/apache/ignite/sql/parser/IgniteSqlParser.g4
/*
 * Licensed to the Apache Software Foundation (ASF) under one or more
 * contributor license agreements.  See the NOTICE file distributed with
 * this work for additional information regarding copyright ownership.
 * The ASF licenses this file to You under the Apache License, Version 2.0
 * (the "License"); you may not use this file except in compliance with
 * the License.  You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

parser grammar IgniteSqlParser;

@header {
package org.apache.ignite.internal.parser;
}

options { tokenVocab=IgniteSqlLexer; }

root
    : sqlStatements? EOF
    ;

sqlStatements
    : (sqlStatement SEMI | emptyStatement)*
    (sqlStatement SEMI? | emptyStatement)
    ;

sqlStatement
    : ddlStatement
    ;

ddlStatement
    : dropIndex
    ;

dropIndex
    : DROP INDEX ifExists? (indexName | indexNameWithSchema)
    ;

ifExists
    : IF EXISTS;

indexName
    : ID;

indexNameWithSchema
    : ID DOT ID;

emptyStatement
    : SEMI
    ;
